k8s/service-app-4-fun.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-4-fun-service
  namespace: space-01
spec:
  type: NodePort
  selector:
    app: app-4-fun
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
